Complete milestone 2C framework